--- a/src/styles/Chat.module.css
+++ b/src/styles/Chat.module.css
@@ -141,53 +141,91 @@
 @media  only screen and  (max-width:
 1240px) {
   .wrap{
-    width:50%;
+    width:100vh;
     padding: 15px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    word-wrap: break-word;
+    box-sizing: border-box;
   }
 
 }
 @media  only screen and  (max-width:
 950px) {
   .wrap{
-    width:30%;
+    width:80vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0 2px;
+    padding: 0 ;
+    word-wrap: break-word;
+    box-sizing: border-box;
   
   }
 
 }
 
 @media  only screen and  (max-width:
-576px ) {
+576px )  {
   .wrap{
-    width: 24%;
+    width: 58-+vh;
 
-    padding: 0  ;
+    padding: 0   ;
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
+    height:98vh;
+    word-wrap: break-word;
+    box-sizing: border-box;
+    padding: 0 2px;
+  }
+
+  .emojies {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-40%);
+    bottom: 100%;
+  }
+  
+}
+
+@media  only screen and  (max-width:
+576px ) and (max-height:
+800px ) {
+  .wrap{
+    width: 50vh;
+
+    padding: 0   ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height:91vh;
     word-wrap: break-word;
     box-sizing: border-box;
     padding: 0 2px;
   }
 }
 
+.emojies {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-40%);
+  bottom: 100%;
+}
+
+
+
 
 
 
 
 @media  only screen and  (max-width:
-370px ) {
+380px ) {
   .wrap{
-    width: 20%;
+    width: 60vh;
 
-    height: 10%;
+    
     display: flex;
     justify-content: center;
     align-items: center;
